<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:baselineAligned="false"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/collector_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/description_collector"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_account_circle_24" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/collector_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="Nombre del Coleccionista" />

        <TextView
            android:id="@+id/collector_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="email@ejemplo.com" />
    </LinearLayout>

</LinearLayout>