<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_collector"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/baseline_album_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/artist_24px"
        android:title="@string/title_artists" />

</menu>