...
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="#FFFFFF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albums_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/list_albums_label"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
